--- a/client/src/assets/css/profile.css
+++ b/client/src/assets/css/profile.css
@@ -29,6 +29,9 @@
 
     & h3 {
         width: 100%;
+        & button {
+            margin-right: .5rem;
+        }
     }
 
     & article {
@@ -38,12 +41,25 @@
 
         & div {
             display: grid;
-            grid-template-columns: auto 1fr;
+            grid-template-columns: auto 1fr auto;
             gap: .5rem 1rem;
             outline: 1px solid var(--blue);
             padding: .5rem;
             width: 100%;
             border-radius: 1rem;
+        }
+
+        & .edu {
+            & .delete-btn {
+                /* row s, col s, row e, col e */
+                grid-area: 1 / 3 / -1 / -1;
+            }
+        }
+
+        & .exp {
+            & .delete-btn {
+                grid-area: 1 / 3 / 4 / -1;
+            }
         }
     }
 }
