--- a/client/src/assets/css/profile.css
+++ b/client/src/assets/css/profile.css
@@ -49,14 +49,14 @@
             border-radius: 1rem;
         }
 
-        & .edu {
+        & .education {
             & .delete-btn {
                 /* row s, col s, row e, col e */
                 grid-area: 1 / 3 / -1 / -1;
             }
         }
 
-        & .exp {
+        & .experience {
             & .delete-btn {
                 grid-area: 1 / 3 / 4 / -1;
             }
