--- a/client/src/assets/css/index.css
+++ b/client/src/assets/css/index.css
@@ -137,33 +137,36 @@ section {
   flex-direction: column;
   gap: 1rem;
   border-radius: 1rem;
-  /* border: 1px solid var(--primary); */
+  width: inherit;
 }
 
-.details-section,
-.form-section,
-.list-section {
-  width: inherit;
+ul {
+  list-style: none;
 }
 
 .list-section {
   gap: .5rem;
   overflow-y: scroll;
+
+  & h2 {
+    position: sticky;
+    top: 0;
+    background-color: var(--primary);
+    box-shadow: 0 -.5rem 0 .5rem var(--primary);
+  }
+
+  & article:nth-child(2) {
+    font-size: 1rem;
+    position: sticky;
+    top: 2rem;
+    background-color: var(--primary);
+    box-shadow: 0 0 0 .25rem var(--primary);
+  }
 }
 
-.list-section h2 {
-  position: sticky;
-  top: 0;
-  background-color: var(--primary);
-  box-shadow: 0 -.5rem 0 .5rem var(--primary);
-}
-
-.list-section article:nth-child(2) {
-  font-size: 1rem;
-  position: sticky;
-  top: 2.2rem;
-  background-color: var(--primary);
-  box-shadow: 0 0 0 .25rem var(--primary);
+textarea {
+  width: 100%;
+  resize: none;
 }
 
 .wrapper {
