--- a/client/src/assets/css/job.css
+++ b/client/src/assets/css/job.css
@@ -1,108 +1,113 @@
-#note-checkbox{
-    display: flex;
-    gap: 1rem;
-    align-items: center;
+/* section | job options */
+#job-options {
+    & .resume-form-item {
+        display: grid;
+        gap: 1rem;
+        grid-template-columns: 1fr 1fr;
+
+        & label {
+            display: inherit;
+            gap: inherit;
+            grid-column: 1 / -1;
+            grid-template-columns: 3rem 1fr;
+            justify-items: flex-start;
+        }
+    }
+
+    & .job-buttons {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 1rem;
+    }
 }
 
+/* section | job profile */
 #job-profile {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: .5rem .75rem;
+
+    & h2,
+    article:nth-child(2) {
+        grid-column: 1 / -1;
+    }
+
+    & article:nth-child(5) p {
+        text-align: center;
+    }
+
+    & .job-detail {
+        display: flex;
+        flex-direction: column;
+    }
+
 }
 
-
-#job-profile h2,
-#job-profile article:nth-child(2) {
-    grid-column: 1 / -1;
-}
-
-#job-profile article:nth-child(5) p {
-    text-align: center;
-}
-
-.job-detail {
-    display: flex;
-    flex-direction: column;
-}
-
-.job-buttons {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 1rem;
-}
-
-.note-form {
-    display: flex;
-    flex-direction: column;
-    gap: .5rem;
-}
-
-.note-form textarea {
-    resize: none;
-    height: 4rem;
-}
-
-/* section | note form */
+/* section | notes section */
 #notes {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-}
 
-.note {
-    display: grid;
-    gap: .25rem .5rem;
-    grid-template-columns: 1fr auto;
-    grid-template-areas:
-        "a c"
-        "b c";
-}
+    & .note {
+        display: grid;
+        gap: .25rem .5rem;
+        grid-template-columns: 1fr auto;
+        grid-template-areas:
+            "a c"
+            "b c";
 
-.note h3 {
-    grid-area: a;
-}
+        & h3 {
+            grid-area: a;
+        }
 
-.note p {
-    grid-area: b;
-    font-variant: normal;
-}
+        & p {
+            grid-area: b;
+            font-variant: normal;
+        }
 
-.note button {
-    grid-area: c;
-    height: fit-content;
+        & button {
+            grid-area: c;
+            height: fit-content;
+        }
+
+    }
 }
 
 @media screen and (min-width: 768px) {
+
+    /* section | job profile */
     #job-profile {
         grid-template-columns: 2fr repeat(4, 1fr);
         height: 100%;
+
+        & article:nth-child(2) {
+            grid-column: 1;
+        }
+
+        & article:nth-child(5) p {
+            text-align: inherit;
+        }
+
     }
 
-    #job-profile article:nth-child(2) {
-        grid-column: 1;
-    }
-
-    #job-profile article:nth-child(5) p {
-        text-align: inherit;
-    }
-
+    /* section | job options */
     #job-options {
         display: flex;
         gap: .5rem 1rem;
-    }
 
-    #job-options h2 {
-        grid-area: a;
-    }
+        & h2 {
+            grid-area: a;
+        }
 
-    #job-options .job-buttons {
-        grid-area: b;
-    }
+        & .job-buttons {
+            grid-area: b;
+        }
 
-    #job-options .note-form {
-        grid-area: c;
+        & .note-form {
+            grid-area: c;
+        }
     }
-
 }
 
 @media screen and (min-width: 1024px) {
