--- a/client/src/assets/css/home.css
+++ b/client/src/assets/css/home.css
@@ -1,41 +1,53 @@
-#user-profile,
-#jobs article {
-    display: grid;
-    gap: .25rem .5rem;
-}
+.home {
 
-#user-profile {
-    grid-template-columns: repeat(4, auto);
+    & #user-profile,
+    #jobs article {
+        display: grid;
+        gap: .25rem .5rem;
+    }
 
-    & h2 {
-        grid-column: 1 / -1;
+    /* user profile */
+    #user-profile {
+        grid-template-columns: repeat(4, auto);
+
+        & h2 {
+            grid-column: 1 / -1;
+        }
+
+        & article {
+            font-size: smaller;
+        }
+    }
+
+    /* jobs list */
+    & #jobs {
+        & article {
+            grid-template-columns: 1fr 2fr 2.5rem;
+            padding: .25rem .5rem;
+        }
+
+        & .job {
+            background-color: rgba(255, 255, 255, 0.03);
+            border-radius: 2rem;
+            align-items: center;
+
+            & a {
+                overflow: hidden;
+                white-space: nowrap;
+                text-overflow: ellipsis;
+            }
+
+            & .count {
+                text-align: center;
+            }
+        }
     }
 }
 
-/* job list */
-#jobs article {
-    grid-template-columns: 1fr 2fr 2.5rem;
-    padding: .25rem .5rem;
-}
 
-.job {
-    background-color: rgba(255, 255, 255, 0.03);
-    border-radius: 2rem;
-    align-items: center;
-
-    & a {
-        overflow: hidden;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-    }
-
-    & .count {
-        text-align: center;
-    }
-}
 
 @media screen and (min-width: 768px) {
-    main {
+    .home {
         grid-template-areas:
             "c a"
             "c b";
