--- a/client/src/assets/css/job.css
+++ b/client/src/assets/css/job.css
@@ -1,119 +1,129 @@
-/* section | job options */
-#job-options {
-    & .item-form {
-        display: grid;
-        gap: 1rem;
-        grid-template-columns: 1fr 1fr;
+#job-page {
 
-        & label {
-            display: inherit;
-            gap: inherit;
+    /* section | job options */
+    & #job-options {
+        & .job-buttons {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 1rem;
+
+            & .delete {
+                border: 1px solid var(--light-red);
+            }
+        }
+
+        & .item-form {
+            display: grid;
+            gap: 1rem;
+            grid-template-columns: auto 1fr;
+            outline: none;
+
+            & label {
+                display: flex;
+                flex-direction: column;
+                align-items: baseline;
+            }
+
+            & button {
+                grid-column: 1 / -1;
+            }
+
+            /* temp solution until cancel button is implemented */
+            & .delete {
+                display: none;
+            }
+        }
+    }
+
+    /* section | job profile */
+    & #job-profile {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: .5rem .75rem;
+
+        & h2,
+        article:nth-child(2) {
             grid-column: 1 / -1;
-            grid-template-columns: 3rem 1fr;
-            justify-items: flex-start;
         }
 
-        & .delete {
-            border: 1px solid var(--light-red);
+        & article:nth-child(5) p {
+            text-align: center;
         }
-    }
 
-    & .job-buttons {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 1rem;
-
-        & .delete {
-            border: 1px solid var(--light-red);
+        & .job-detail {
+            display: flex;
+            flex-direction: column;
         }
-    }
-}
 
-/* section | job profile */
-#job-profile {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: .5rem .75rem;
-
-    & h2,
-    article:nth-child(2) {
-        grid-column: 1 / -1;
     }
 
-    & article:nth-child(5) p {
-        text-align: center;
-    }
-
-    & .job-detail {
+    /* section | notes section */
+    & #notes {
         display: flex;
         flex-direction: column;
-    }
+        gap: 1rem;
 
-}
+        & .note {
+            display: grid;
+            gap: .25rem .5rem;
+            grid-template-columns: 1fr auto;
+            grid-template-areas:
+                "a c"
+                "b c";
 
-/* section | notes section */
-#notes {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+            & h3 {
+                grid-area: a;
+            }
 
-    & .note {
-        display: grid;
-        gap: .25rem .5rem;
-        grid-template-columns: 1fr auto;
-        grid-template-areas:
-            "a c"
-            "b c";
+            & p {
+                grid-area: b;
+                font-variant: normal;
+            }
 
-        & h3 {
-            grid-area: a;
+            & button {
+                grid-area: c;
+                height: fit-content;
+            }
         }
-
-        & p {
-            grid-area: b;
-            font-variant: normal;
-        }
-
-        & button {
-            grid-area: c;
-            height: fit-content;
-        }
-
     }
 }
 
 @media screen and (min-width: 768px) {
+    #job-page {
 
-    /* section | job profile */
-    #job-profile {
-        grid-template-columns: 2fr repeat(4, 1fr);
-        height: 100%;
+        /* section | job options */
+        & #job-options {
+            display: flex;
+            gap: 1rem;
 
-        & article:nth-child(2) {
-            grid-column: 1;
+            & .item-form {
+                display: flex;
+                flex-direction: column;
+                gap: inherit;
+
+                & label {
+                    gap: inherit;
+                }
+
+                & label[for="interview"] {
+                    align-items: center;
+                    flex-direction: row;
+                }
+            }
         }
 
-        & article:nth-child(5) p {
-            text-align: inherit;
-        }
+        /* section | job profile */
+        & #job-profile {
+            grid-template-columns: 2fr repeat(4, 1fr);
+            height: 100%;
 
-    }
+            & article:nth-child(2) {
+                grid-column: 1;
+            }
 
-    /* section | job options */
-    #job-options {
-        display: flex;
-        gap: .5rem 1rem;
-
-        & h2 {
-            grid-area: a;
-        }
-
-        & .job-buttons {
-            grid-area: b;
-        }
-
-        & .note-form {
-            grid-area: c;
+            & article:nth-child(5) p {
+                text-align: inherit;
+            }
         }
     }
 }
