--- a/client/src/assets/css/index.css
+++ b/client/src/assets/css/index.css
@@ -27,7 +27,7 @@
   transition: 1s;
 
   & :hover {
-    color: var(--light-red);
+    color: var(--green);
   }
 }
 
@@ -47,8 +47,12 @@
   color: var(--red);
 }
 
-.pending {
+.pending, .active {
   color: var(--green);
+}
+
+.active {
+  outline: 2px solid var(--green);
 }
 
 .rate {
