--- a/client/src/assets/css/job.css
+++ b/client/src/assets/css/job.css
@@ -129,7 +129,31 @@
 }
 
 @media screen and (min-width: 1024px) {
-    .aside button {
-        padding: .15rem 1rem;
+    #job-page {
+        & .aside button {
+            padding: .15rem 1rem;
+        }
+
+        & #cover-letter-section {
+            grid-column: 1 / -1;
+            min-height: 50vh;
+            flex-direction: row;
+
+            & #letter-form form {
+                display: flex;
+                flex-direction: column;
+                row-gap: 1rem;
+
+                & label {
+                    display: grid;
+                }
+            }
+            & #cover-letter p {
+                white-space: pre-line;
+            }
+        }
+
     }
+
+
 }
