--- a/client/src/assets/css/job.css
+++ b/client/src/assets/css/job.css
@@ -134,12 +134,12 @@
             padding: .15rem 1rem;
         }
 
-        & #cover-letter-section {
+        & #letters-section {
             grid-column: 1 / -1;
-            min-height: 50vh;
+            max-height: 50vh;
             flex-direction: row;
 
-            & #letter-form form {
+            & #cover-letter-form {
                 display: flex;
                 flex-direction: column;
                 row-gap: 1rem;
@@ -148,7 +148,12 @@
                     display: grid;
                 }
             }
-            & #cover-letter p {
+
+            & #letters {
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+                overflow-y: scroll;
                 white-space: pre-line;
             }
         }
