implemented tenative print styles

--- a/client/src/assets/css/index.css
+++ b/client/src/assets/css/index.css
@@ -47,7 +47,8 @@
   color: var(--red);
 }
 
-.pending, .active {
+.pending,
+.active {
   color: var(--green);
 }
 
@@ -351,4 +352,13 @@ ul {
     grid-column: span 1;
   }
 
+}
+
+@media print {
+
+  header,
+  footer,
+  ::-webkit-scrollbar {
+    display: none;
+  }
 }
